Agrego contenido importante

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iure illum at! Laboriosam, debitis rem?
       </p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consequatur quia optio molestias, veniam unde,
-      maiores itaque blanditiis veritatis quod exercitationem sequi quaerat soluta illum pariatur consequuntur
-      temporibus tempora velit id omnis quis voluptatibus ut amet numquam? Hic, incidunt corrupti?
+      <p class="important">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ex ipsam minima accusamus distinctio aperiam
+        magni. Vel omnis sequi quas, saepe soluta id similique voluptatibus ipsum pariatur ex harum. Ullam, nulla.
+        Maxime commodi suscipit impedit doloribus deleniti voluptates cum sint.
+      </p>
     </div>
   </div>
 </body>
