Modifique la cabecera y el color de header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Blog Post Richard Bravo</h1>
+      <h1>Blog Post Cabecera</h1>
     </div>
     <nav class="navbar">
       <div class="container">
