Modifique la cabecera y el color de header y agregue el mas texto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Blog Post Richard Bravo</h1>
+      <h1>Blog Post Master</h1>
     </div>
     <nav class="navbar">
       <div class="container">
@@ -49,6 +49,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ex ipsam minima accusamus distinctio aperiam
         magni. Vel omnis sequi quas, saepe soluta id similique voluptatibus ipsum pariatur ex harum. Ullam, nulla.
         Maxime commodi suscipit impedit doloribus deleniti voluptates cum sint.
+      </p>
+      <p>
+        Fin del comunicado
       </p>
     </div>
   </div>
