--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Blog Post Master</h1>
+      <h1>Blog Post Master 2.0</h1>
     </div>
     <nav class="navbar">
       <div class="container">
